correctly remove extra whitespaces and remove them only in view-mode

--- a/frontend/styles/rating.sass
+++ b/frontend/styles/rating.sass
@@ -344,3 +344,6 @@
   &_share
     display: flex !important
     justify-content: center
+
+  &_source
+    white-space: pre-wrap
