--- a/frontend/styles/rating_item.sass
+++ b/frontend/styles/rating_item.sass
@@ -118,6 +118,7 @@
   &_description
     margin: 15px 0
     width: 100%
+    white-space: pre-wrap
 
     &.m-edit
       resize: none
